src/gcal-event-widget.h
@@ -70,6 +70,9 @@ gint         gcal_event_widget_compare_by_length           (GcalEventWidget    *
 gint         gcal_event_widget_compare_by_start_date       (GcalEventWidget    *widget1,
                                                             GcalEventWidget    *widget2);
 
+gint         gcal_event_widget_sort_events                 (GcalEventWidget    *widget1,
+                                                            GcalEventWidget    *widget2);
+
 G_END_DECLS
 
 #endif /* __GCAL_EVENT_WIDGET_H__ */
